implemented login/sign up auth flow with JWT

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
+  "functions": {
+    "api/**/*.py": {
+      "includeFiles": "api/**"
+    }
+  },
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/(.*)",
       "destination": "/api/index"
     }
   ]
